flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;
  font-weight: bold;
  font-size: 30px;
  display: flex;
  align-items: center;
  padding: 10px;px;
}

main {
  display: flex;
  flex: 1;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
  font-size: 24px;
  color: white;
}
.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;
  width: 100%;
}

footer {
  display: flex;
  /* flex-direction: column; */
}

.sidebar {
  flex-basis: 30%;
  background: royalblue;
  /* padding: 5px; */
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;
  height: 300px;
  width: 300px;
}

.lorembox {
  display: flex;
  flex-wrap: wrap;
  flex-basis: 70%;
  padding: 32px;
}

